--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@makerdao/multicall": "^0.12.0",
     "bignumber.js": "^9.0.1",
+    "ipfs-only-hash": "^2.0.1",
     "node-fetch": "^2.6.1"
   }
 }
